k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: careercrafter-ingress

  annotations:

    alb.ingress.kubernetes.io/scheme: internet-facing

    alb.ingress.kubernetes.io/target-type: ip

spec:

  ingressClassName: alb

  rules:
  - http:
      paths:
      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8084

      - path: /v3/api-docs
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8084

      - path: /api/v1
        pathType: Prefix
        backend:
          service:
            name: backend
            port:
              number: 8084

      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
